package org.example.ex3;

public interface Idioma {

    String getDiaDaSemana(Integer dia);

}
