package org.example.ex3;

public interface Ingles extends Idioma{
}
