package org.example.ex3;

public interface Portugues extends Idioma{
}
