@startuml

class SemanaTest{
    -Idioma idioma;
}

class Semana{
    -Idioma idioma;
    imprimeDiaSemana();
}

Semana o-- Idioma : use
SemanaTest o-- Semana: use

interface Idioma{
    String getDiaDaSemana();
}

interface Portugues extends Idioma{}

class PortuguesImpl implements Portugues{
    -Map diasDaSemana;
    +getDiaDaSemana();
}

interface Ingles extends Idioma{}

class InglesImpl implements Ingles{
    -Map daysOfTheWeek;
    +getDiaDaSemana();
}

@enduml